shelf: Mouse move should not hide the auto-hide shelf.

Bug: 900758
Change-Id: Idb6e22aa144d290f21c5af6139e0d168905e5ff6
Reviewed-on: https://chromium-review.googlesource.com/c/1352526
Commit-Queue: Min Chen <minch@chromium.org>
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Cr-Commit-Position: refs/heads/master@{#612693}
Former-commit-id: 3cdc16799b25d0c65339df6630a2b96e0651ac89